// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton component should render radio button correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 50,
    }
  }
  testID="radio-button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <View
      color="primary"
      disabled={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#777777",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
        ]
      }
      testID="radio-button-circle"
    />
  </View>
</View>
`;

exports[`RadioButton component should render radio button selected but disabled correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 50,
    }
  }
  testID="radio-button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <View
      color="primary"
      disabled={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#bbbbbb",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
        ]
      }
      testID="radio-button-circle"
    />
  </View>
</View>
`;

exports[`RadioButton component should render radio button selected but disabled with label correctly 1`] = `
<TouchableOpacity
  activeOpacity={1}
  disabled={true}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
  testID="radio-button-label"
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderRadius": 50,
      }
    }
    testID="radio-button"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "center",
            "paddingBottom": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 8,
          },
        ]
      }
    >
      <View
        color="primary"
        disabled={true}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#bbbbbb",
              "borderRadius": 12,
              "borderWidth": 2,
              "height": 20,
              "justifyContent": "center",
              "width": 20,
            },
          ]
        }
        testID="radio-button-circle"
      />
    </View>
  </View>
  <Text
    disabled={true}
    style={
      Array [
        Object {
          "color": "#bbbbbb",
          "fontFamily": "Roboto",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.22,
          "lineHeight": 21,
          "marginLeft": 8,
        },
      ]
    }
  >
    My Label
  </Text>
</TouchableOpacity>
`;

exports[`RadioButton component should render radio button selected correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 50,
    }
  }
  testID="radio-button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <View
      color="primary"
      disabled={false}
      selected={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#f4ab34",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
        ]
      }
      testID="radio-button-circle"
    >
      <View
        color="primary"
        disabled={false}
        selected={true}
        style={
          Array [
            Object {
              "backgroundColor": "#f4ab34",
              "borderRadius": 12,
              "height": 10,
              "width": 10,
            },
          ]
        }
        testID="radio-button-circle-selected"
      />
    </View>
  </View>
</View>
`;

exports[`RadioButton component should render radio button with label correctly 1`] = `
<TouchableOpacity
  activeOpacity={1}
  disabled={false}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
  testID="radio-button-label"
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderRadius": 50,
      }
    }
    testID="radio-button"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "center",
            "paddingBottom": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 8,
          },
        ]
      }
    >
      <View
        color="primary"
        disabled={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#777777",
              "borderRadius": 12,
              "borderWidth": 2,
              "height": 20,
              "justifyContent": "center",
              "width": 20,
            },
          ]
        }
        testID="radio-button-circle"
      />
    </View>
  </View>
  <Text
    disabled={false}
    style={
      Array [
        Object {
          "color": "#333333",
          "fontFamily": "Roboto",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.22,
          "lineHeight": 21,
          "marginLeft": 8,
        },
      ]
    }
  >
    My Label
  </Text>
</TouchableOpacity>
`;
